--- a/WaterQualityPred.ipynb
+++ b/WaterQualityPred.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "b360abbe-e87d-4c36-af38-b35bd48d2517",
    "metadata": {},
    "outputs": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "b024a389-e6d4-4e96-a75f-1d5ded1c4482",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "id": "cbae76f5-2560-439f-b42a-7ee340766c00",
    "metadata": {},
    "outputs": [
@@ -189,20 +189,20 @@
        "4  1462.0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# load the dataset\n",
-    "df = pd.read_csv('WaterOuality.csv',sep=';')\n",
+    "df = pd.read_csv('WaterQuality.csv',sep=';')\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "f0695fd7-6929-4c69-8898-e72896900ce7",
    "metadata": {},
    "outputs": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "21feb067-09f5-416b-a9a5-43b43cd8d831",
    "metadata": {},
    "outputs": [
@@ -247,7 +247,7 @@
        "(2861, 11)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "id": "b0e2f909-3b28-4ffd-87ff-689a8ab4d14d",
    "metadata": {},
    "outputs": [
@@ -435,7 +435,7 @@
        "CL         5615.280  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "5f39d8e1-2f68-478f-8d64-838bcdbd2bb3",
    "metadata": {},
    "outputs": [
@@ -468,7 +468,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "id": "d146fdb3-998c-461a-84d5-b45af90dffe0",
    "metadata": {},
    "outputs": [
@@ -708,20 +708,20 @@
        "[2861 rows x 11 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# date is in object - date format\n",
-    "df['date'] = pd.to_datetime(df['date'], format=\"%d-%m-%Y\")\n",
+    "df['date'] = pd.to_datetime(df['date'], format=\"%d.%m.%Y\")\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "fa9fc0e4-e6cd-4810-a68f-3acdc76c15e4",
    "metadata": {},
    "outputs": [
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "id": "18b44f69-e8b2-4549-814a-a336db31fa94",
    "metadata": {},
    "outputs": [
@@ -792,8 +792,6 @@
        "      <th>SO4</th>\n",
        "      <th>PO4</th>\n",
        "      <th>CL</th>\n",
-       "      <th>year</th>\n",
-       "      <th>month</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -810,8 +808,6 @@
        "      <td>154.0</td>\n",
        "      <td>0.454</td>\n",
        "      <td>289.5</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -826,8 +822,6 @@
        "      <td>352.0</td>\n",
        "      <td>0.090</td>\n",
        "      <td>1792.0</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -842,8 +836,6 @@
        "      <td>416.0</td>\n",
        "      <td>0.200</td>\n",
        "      <td>2509.0</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -858,8 +850,6 @@
        "      <td>275.2</td>\n",
        "      <td>0.377</td>\n",
        "      <td>1264.0</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -874,8 +864,6 @@
        "      <td>281.6</td>\n",
        "      <td>0.134</td>\n",
        "      <td>1462.0</td>\n",
-       "      <td>2001</td>\n",
-       "      <td>3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -889,15 +877,15 @@
        "3   1 2000-12-13  0.170  2.23       35.6  12.40  17.13  0.099  275.2  0.377   \n",
        "4   1 2001-03-02  0.000  3.03       48.8  14.69  10.00  0.065  281.6  0.134   \n",
        "\n",
-       "       CL  year  month  \n",
-       "0   289.5  2000      2  \n",
-       "1  1792.0  2000      5  \n",
-       "2  2509.0  2000      9  \n",
-       "3  1264.0  2000     12  \n",
-       "4  1462.0  2001      3  "
+       "       CL  \n",
+       "0   289.5  \n",
+       "1  1792.0  \n",
+       "2  2509.0  \n",
+       "3  1264.0  \n",
+       "4  1462.0  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -909,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "id": "16c26fe3-9d39-47a9-80ee-b1332ecdb1aa",
    "metadata": {},
    "outputs": [],
@@ -920,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "id": "2b1a6f1f-16ff-42df-b0f1-d80a55ffc38d",
    "metadata": {},
    "outputs": [
@@ -1061,7 +1049,7 @@
        "4  1462.0  2001      3  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1072,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 29,
    "id": "26bbbce1-8326-4166-be6d-2ce00e616630",
    "metadata": {},
    "outputs": [
@@ -1084,7 +1072,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1095,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "id": "297f6475-d446-4147-8d7d-63652cf84205",
    "metadata": {},
    "outputs": [],
